--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,8 +13,8 @@ pandas = "^2.1.3"
 pyranges = "^0.0.129"
 h5py = "^3.10.0"
 ctxcore = "^0.2.0"
-sklearn = "^0.0.post11"
 ipython = "^8.18.1"
+scikit-learn = "^1.3.2"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -23,3 +23,6 @@ mypy = "^1.7.1"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.scripts]
+pycistarget = "pycistarget.cli.pycistarget:main"
