--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,13 +7,13 @@ license = "Academic Non-commercial"
 readme = "README.rst"
 
 [tool.poetry.dependencies]
-python = ">=3.9 <3.12"
+python = ">=3.8 <3.12"
 numpy = "^1.26.2"
 pandas = "^2.1.3"
 pyranges = "^0.0.129"
 h5py = "^3.10.0"
 ctxcore = "^0.2.0"
-ipython = "^8.18.1"
+ipython = ">=8.0.0"
 scikit-learn = "^1.3.2"
 
 
