--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ readme = "README.rst"
 
 [tool.poetry.dependencies]
 python = ">=3.8 <3.12"
-numpy = "^1.26.2"
+numpy = "<2.0.0"
 pandas = "^2.1.3"
 pyranges = "^0.0.129"
 h5py = "^3.10.0"
